--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "prettier": "^3.1.0"
   }
 }
