--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix",
+    "lint": "eslint --ext .jsx --ext .js --ext .ts --ext .tsx src",
+    "lint:fix": "eslint --ext .jsx --ext .js --ext .ts --ext .tsx src --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "eslintConfig": {
